# meroy-eq

./: CMakeLists.txt  README_RU.md
.github/workflows/: build.yml
Source/: CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.h
